Rename app Horizon

--- a/package.json
+++ b/package.json
@@ -170,8 +170,8 @@
     "webpack-merge": "^5.8.0"
   },
   "build": {
-    "productName": "ElectronReact",
-    "appId": "org.erb.ElectronReact",
+    "productName": "Horizon",
+    "appId": "dev.iancleary.Horizon",
     "asar": true,
     "asarUnpack": "**\\*.{node,dll}",
     "files": [
