--- a/.eslintignore
+++ b/.eslintignore
@@ -17,10 +17,7 @@ node_modules
 
 # OSX
 .DS_Store
-
-release/app/dist
-release/build
-.erb/dll
+app/
 
 .idea
 npm-debug.log.*
@@ -28,6 +25,3 @@ npm-debug.log.*
 *.sass.d.ts
 *.scss.d.ts
 
-# eslint ignores hidden directories by default:
-# https://github.com/eslint/eslint/issues/8429
-!.erb
