Use next lint's builtin eslint

--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "private": true,
-  "name": "my-nextron-app",
-  "description": "My application description",
+  "name": "horizon",
+  "description": "My application",
   "version": "1.0.0",
-  "author": "Yoshihide Shiono <shiono.yoshihide@gmail.com>",
+  "author": "Ian Cleary <github@iancleary.me>",
   "main": "app/background.js",
   "scripts": {
     "build": "nextron build",
@@ -25,8 +25,8 @@
     "cross-env": "^7.0.3",
     "electron": "^21.3.3",
     "electron-builder": "^23.6.0",
-    "eslint": "^8.40.0",
-    "eslint-config-next": "^13.4.1",
+    "eslint": "8.40.0",
+    "eslint-config-next": "13.4.1",
     "next": "^12.3.4",
     "nextron": "^8.5.0",
     "react": "^18.2.0",
