--- a/package.json
+++ b/package.json
@@ -12,28 +12,28 @@
     "postinstall": "electron-builder install-app-deps"
   },
   "dependencies": {
-    "electron-serve": "^1.1.0",
-    "electron-store": "^8.1.0",
-    "styled-components": "^5.3.10"
+    "electron-serve": "1.1.0",
+    "electron-store": "8.1.0",
+    "styled-components": "5.3.10"
   },
   "devDependencies": {
-    "@next/eslint-plugin-next": "^13.4.1",
-    "@types/node": "^18.11.18",
-    "@types/react": "^18.0.26",
-    "@types/styled-components": "^5.1.26",
-    "babel-plugin-styled-components": "^2.1.1",
-    "cross-env": "^7.0.3",
-    "electron": "^21.3.3",
-    "electron-builder": "^23.6.0",
+    "@next/eslint-plugin-next": "13.4.1",
+    "@types/node": "18.11.18",
+    "@types/react": "18.0.26",
+    "@types/styled-components": "5.1.26",
+    "babel-plugin-styled-components": "2.1.1",
+    "cross-env": "7.0.3",
+    "electron": "21.3.3",
+    "electron-builder": "23.6.0",
     "eslint": "8.40.0",
     "eslint-config-next": "13.4.1",
-    "next": "^12.3.4",
-    "nextron": "^8.5.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "typescript": "^4.9.4"
+    "next": "12.3.4",
+    "nextron": "8.5.0",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "typescript": "4.9.4"
   },
   "resolutions": {
-    "styled-components": "^5"
+    "styled-components": "5"
   }
 }
