--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,10 +1,27 @@
 name: Test
 
-on: [push, pull_request]
+on:
+  push:
+    branches:
+      - main
+    paths-ignore:
+      - README.md
+      - .editorconfig
+      - .gitignore
+      - .github/**
+      - .vscode/**
+  pull_request_target:
+    branches:
+      - master
+    types:
+      - closed
+  workflow_dispatch:
 
 jobs:
   test:
     runs-on: ${{ matrix.os }}
+
+    if: ${{ github.event_name == 'push' || github.event.pull_request.merged == true }}
 
     strategy:
       matrix:
