--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -12,7 +12,7 @@ on:
       - .vscode/**
   pull_request_target:
     branches:
-      - master
+      - main
     types:
       - closed
   workflow_dispatch:
