--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -10,7 +10,7 @@ on:
       - .gitignore
       - .github/**
       - .vscode/**
-  pull_request_target:
+  pull_request:
     branches:
       - main
     types:
