--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,12 +11,12 @@ on:
       - .github/**
       - .vscode/**
   pull_request:
-    branches:
-      - main
-    types:
-      - opened
-      - edited
-  workflow_dispatch:
+    types: [opened, synchronize]
+    paths-ignore:
+      - README.md
+      - .editorconfig
+      - .gitignore
+      - .vscode/**
 
 jobs:
   test:
