--- a/package.json
+++ b/package.json
@@ -14,14 +14,13 @@
   "dependencies": {
     "electron-serve": "1.1.0",
     "electron-store": "8.1.0",
-    "styled-components": "5.3.10"
+    "styled-components": "^6.0.0-rc.1"
   },
   "devDependencies": {
     "@next/eslint-plugin-next": "13.4.1",
     "@types/node": "14.14.31",
     "@types/react": "18.2.5",
     "@types/styled-components": "5.1.26",
-    "babel-plugin-styled-components": "2.1.1",
     "cross-env": "7.0.3",
     "electron": "21.3.3",
     "electron-builder": "23.6.0",
