--- a/package.json
+++ b/package.json
@@ -13,14 +13,14 @@
   },
   "dependencies": {
     "electron-serve": "1.1.0",
-    "electron-store": "8.1.0",
-    "styled-components": "^6.0.0-rc.1"
+    "electron-store": "8.1.0"
   },
   "devDependencies": {
     "@next/eslint-plugin-next": "13.4.1",
     "@types/node": "14.14.31",
     "@types/react": "18.2.5",
     "@types/styled-components": "5.1.26",
+    "babel-plugin-styled-components": "2.1.1",
     "cross-env": "7.0.3",
     "electron": "21.3.3",
     "electron-builder": "23.6.0",
@@ -30,6 +30,7 @@
     "nextron": "8.5.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "styled-components": "5.3.10",
     "typescript": "4.9.4"
   },
   "resolutions": {
